--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,14 @@
     android:theme="@style/AppTheme">
     <activity
       android:name=".MainActivity"
-      android:label="@string/app_name">
+      android:label="@string/app_name"
+      android:launchMode="singleTask">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-
-    <!--<service-->
-    <!--android:name=".service.DetectionService"-->
-    <!--android:enabled="true" />-->
 
     <service
       android:name=".service.DetectionService"
